--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,17 @@
 *.exe
 *.out
 *.app
+
+# Autotools
+Makefile
+Makefile.in
+configure
+configure.in
+config.h
+config.h.in
+config.status
+autom4te.cache
+aclocal.m4
+
+# Others
+*.log
