--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,7 +1,9 @@
-bin_PROGRAMS=redgiant
-redgiant_SOURCES=main.cc
+bin_PROGRAMS = redgiant
+redgiant_SOURCES = main.cc
+redgiant_LDADD = handler/libhandler.a service/libservice.a utils/libutils.a
 
-SUBDIRS = service
+SUBDIRS = handler service utils
 
 AM_CPPFLAGS = -I$(srcdir)
+AM_LDFLAGS = -levent -llog4cxx
 
