rename logger.cc to h and make utils folder header-only.

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,8 +1,8 @@
-SUBDIRS = handler service utils
+SUBDIRS = handler service
 
 bin_PROGRAMS = redgiant
 redgiant_SOURCES = main.cc
-redgiant_LDADD = handler/libhandler.a service/libservice.a utils/libutils.a
+redgiant_LDADD = handler/libhandler.a service/libservice.a
 
 AM_CPPFLAGS = -I$(srcdir)
 AM_LDFLAGS = -levent -llog4cxx
