add a reusable buffer for handlers

--- a/configure.ac
+++ b/configure.ac
@@ -45,5 +45,6 @@ AC_CONFIG_FILES([Makefile
                  src/test/Makefile
                  src/test/core_index/Makefile
                  src/test/core_reader/Makefile
-                 src/test/service/Makefile])
+                 src/test/service/Makefile
+                 src/test/utils/Makefile])
 AC_OUTPUT
