--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libevent-dev liblog4cxx10-dev
+  - sudo apt-get install -y libevent-dev liblog4cxx10-dev libcppunit-dev
 
 install: true
 
