--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -2,8 +2,7 @@ SUBDIRS = handler model parser service
 
 bin_PROGRAMS = redgiant
 redgiant_SOURCES = main.cc
-redgiant_LDADD = handler/libhandler.a model/libmodel.a parser/libparser.a service/libservice.a
+redgiant_LDADD = handler/libhandler.a model/libmodel.a parser/libparser.a service/libservice.a -levent -llog4cxx
 
 AM_CPPFLAGS = -I$(srcdir)
-AM_LDFLAGS = -levent -llog4cxx
 
