--- a/src/test/core_reader/Makefile.am
+++ b/src/test/core_reader/Makefile.am
@@ -1,6 +1,6 @@
 TESTS = test
 check_PROGRAMS = $(TESTS)
 test_SOURCES = test_main.cc dot_product_reader_test.cc wand_reader_test.cc
+test_LDADD = $(CPPUNIT_LIBS) -llog4cxx
 
 AM_CPPFLAGS = $(CPPUNIT_CFLAGS) -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../../main
-AM_LDFLAGS = $(CPPUNIT_LIBS) -llog4cxx
