--- a/src/main/model/Makefile.am
+++ b/src/main/model/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libmodel.a
-libmodel_a_SOURCES = doc_features.cc feature_cache.cc feature_group.cc feature_space.cc
+libmodel_a_SOURCES = doc_features.cc feature_cache.cc feature_space.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
