add document feeding handler and pipeline

--- a/configure.ac
+++ b/configure.ac
@@ -43,6 +43,7 @@ AC_CONFIG_FILES([Makefile
                  src/main/handler/Makefile
                  src/main/model/Makefile
                  src/main/parser/Makefile
+                 src/main/pipeline/Makefile
                  src/main/service/Makefile
                  src/test/Makefile
                  src/test/core_index/Makefile
