implement feed document handler

--- a/src/main/parser/Makefile.am
+++ b/src/main/parser/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libparser.a
-libparser_a_SOURCES = document_parser.cc
+libparser_a_SOURCES = document_parser.cc feature_cache_parser.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
