--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -2,7 +2,7 @@ SUBDIRS = handler index model parser pipeline service
 
 bin_PROGRAMS = redgiant
 redgiant_SOURCES = main.cc
-redgiant_LDADD = handler/libhandler.a index/libindex.a model/libmodel.a parser/libparser.a pipeline/libpipeline.a service/libservice.a -levent -llog4cxx
+redgiant_LDADD = handler/libhandler.a service/libservice.a pipeline/libpipeline.a index/libindex.a parser/libparser.a model/libmodel.a -levent -llog4cxx
 
 AM_CPPFLAGS = -I$(srcdir)
 
