--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = core_index core_reader handler index model parser pipeline query ranking service utils
+SUBDIRS = core_index core_reader data handler index parser pipeline query ranking service utils
 
 AM_CPPFLAGS = $(CPPUNIT_CFLAGS) -I$(srcdir) -I$(srcdir)/../main
