implement query handler and ranking models

--- a/src/main/query/Makefile.am
+++ b/src/main/query/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libquery.a
-libquery_a_SOURCES = dummy.cc
+libquery_a_SOURCES = simple_query_executor.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
