--- a/src/main/ranking/Makefile.am
+++ b/src/main/ranking/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libranking.a
-libranking_a_SOURCES = dummy.cc
+libranking_a_SOURCES = default_model.cc feature_mapping_model.cc model_manager.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
