--- a/src/main/data/Makefile.am
+++ b/src/main/data/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libdata.a
-libdata_a_SOURCES = document.cc document_id.cc feature_cache.cc feature_space.cc feature_vector.cc
+libdata_a_SOURCES = document.cc document_id.cc document_parser.cc feature_cache.cc feature_space.cc feature_vector.cc query_request_parser.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
