--- a/src/test/ranking/Makefile.am
+++ b/src/test/ranking/Makefile.am
@@ -1,6 +1,6 @@
 TESTS = test
 check_PROGRAMS = $(TESTS)
-test_SOURCES = test_main.cc
-test_LDADD = $(CPPUNIT_LIBS) -llog4cxx
+test_SOURCES = test_main.cc model_manager_test.cc
+test_LDADD = $(CPPUNIT_LIBS) -llog4cxx ../../main/ranking/libranking.a ../../main/index/libindex.a
 
 AM_CPPFLAGS = $(CPPUNIT_CFLAGS) -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../../main
