--- a/src/main/conf/config-release.json
+++ b/src/main/conf/config-release.json
@@ -23,13 +23,12 @@
     /* Maximum number of documents. */
     "max_size": 10000000,
     /* Interval in seconds the background maintaining thread writes updates to index. */
-    "maintain_interval": 300
-  },
-
-  /* Document update pipeline configurations. */
-  "pipeline": {
-    "thread_num": 4,
-    "queue_size": 2048
+    "maintain_interval": 300,
+    /* Document update pipeline configurations. */
+    "update_thread_num": 4,
+    "update_queue_size": 2048,
+    /* Default TTL of documents put from server endpoints */
+    "default_ttl": 86400
   },
 
   /* The feature spaces referred by the data models. */
