--- a/src/main/index/Makefile.am
+++ b/src/main/index/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libindex.a
-libindex_a_SOURCES = document_index_manager.cc document_index.cc document_query.cc index_manager.cc
+libindex_a_SOURCES = document_index.cc document_index_manager.cc document_index_view.cc document_update_pipeline.cc document_update_worker.cc document_query.cc index_manager.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
