remove features from FeatureCache. FeatureCache renamed to FeatureSpaceManager, only used to manage registered feature spaces.

--- a/src/test/data/Makefile.am
+++ b/src/test/data/Makefile.am
@@ -1,6 +1,6 @@
 TESTS = test
 check_PROGRAMS = $(TESTS)
-test_SOURCES = test_main.cc document_id_test.cc document_parser_test.cc feature_cache_test.cc feature_space_test.cc
+test_SOURCES = test_main.cc document_id_test.cc document_parser_test.cc feature_space_test.cc feature_space_manager_test.cc
 test_LDADD = $(CPPUNIT_LIBS) -llog4cxx ../../main/data/libdata.a
 
 AM_CPPFLAGS = $(CPPUNIT_CFLAGS) -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../../main
