implement snapshot handler

--- a/src/main/handler/Makefile.am
+++ b/src/main/handler/Makefile.am
@@ -1,4 +1,4 @@
 lib_LIBRARIES = libhandler.a
-libhandler_a_SOURCES = document_handler.cc query_handler.cc test_handler.cc
+libhandler_a_SOURCES = document_handler.cc query_handler.cc snapshot_handler.cc test_handler.cc
 
 AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/.. 
