Refactors: - Rename BaseIndex to BaseIndexImpl; Rename BaseDocumentIndex to RowIndexImpl; rename BaseEventIndex to PointIndexImpl; - Optimize the update/remove logic in BaseIndexImpl; - Simplify SafePostingList, move COW(copy on write) implementation to BaseIndexImpl; - Remove the spin lock from posting lists

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,7 @@ AC_CONFIG_FILES([Makefile
                  src/main/ranking/Makefile
                  src/main/service/Makefile
                  src/test/Makefile
+                 src/test/core_impl/Makefile
                  src/test/core_index/Makefile
                  src/test/core_reader/Makefile
                  src/test/data/Makefile
