--- a/src/test/core_impl/Makefile.am
+++ b/src/test/core_impl/Makefile.am
@@ -1,6 +1,6 @@
 TESTS = test
 check_PROGRAMS = $(TESTS)
-test_SOURCES = test_main.cc posting_list_test.cc
+test_SOURCES = test_main.cc expire_table_test.cc freezable_posting_list_test.cc
 test_LDADD = $(CPPUNIT_LIBS) -llog4cxx
 
 AM_CPPFLAGS = $(CPPUNIT_CFLAGS) -I$(srcdir) -I$(srcdir)/.. -I$(srcdir)/../../main
